--- a/anhang.tex
+++ b/anhang.tex
@@ -39,7 +39,8 @@ BEGIN
 
 END beh;
     \end{minted}
-    \caption{VHDL-Quelltext eines 2-Bit-Flipflops \cite[siehe][39]{kesel2013}}
+    \caption[VHDL-Quelltext eines 2-Bit-Flipflops]
+            {VHDL-Quelltext eines 2-Bit-Flipflops \cite[siehe][39]{kesel2013}}
 \end{code}
 
 \begin{code}
@@ -76,7 +77,8 @@ BEGIN
 
 END beh;
     \end{minted}
-    \caption{VHDL-Quelltext eines 2-Bit-Multiplexers \cite[siehe][39--40]{kesel2013}}
+    \caption[VHDL-Quelltext eines 2-Bit-Multiplexers]
+            {VHDL-Quelltext eines 2-Bit-Multiplexers \cite[siehe][39--40]{kesel2013}}
 \end{code}
 
 \section{C++"=Quelltexte}
