--- a/glossar.tex
+++ b/glossar.tex
@@ -12,8 +12,7 @@
 \newacronym{dsp}{DSP}{\textit{digital signal processor}}
 \newacronym{fifo}{FIFO}{\textit{first in, first out}}
 \newacronym{fpga}{FPGA}{\textit{field programmable gate array}}
-\newacronym{gpgpu}{GPGPU}{\textit{general-purpose computing on graphics
-                                  processing units}}
+\newacronym{gpgpu}{GPGPU}{\textit{general-purpose computing on GPU}}
 \newacronym{gpu}{GPU}{\textit{graphics processing unit}}
 \newacronym{hls}{HLS}{High-Level-Synthese}
 \newacronym{hpc}{HPC}{\textit{high-performance computing}}
