--- a/sycl.tex
+++ b/sycl.tex
@@ -589,7 +589,8 @@ Modell.
         \draw (0.45, 0.75) -- (-1, 2.35)
                       node[pos = 1.0, align = left, xshift = -6mm] {Processing\\Element};
     \end{tikzpicture}
-    \caption{SYCLs Plattform-Modell \cite[nach][23]{opencl2012}}
+    \caption[SYCLs Plattform-Modell]
+            {SYCLs Plattform-Modell \cite[nach][23]{opencl2012}}
     \label{sycl:konzepte:abstraktion:plattform}
 \end{figure}
 
@@ -778,7 +779,7 @@ lässt sich ebenfalls bestimmen \cite[vgl.][25]{opencl2012}:
         \draw [fill = black] (9, 3.8) circle [radius = 0.5mm];
         \draw [fill = black] (9.2, 3.6) circle [radius = 0.5mm];
     \end{tikzpicture}
-    \caption{SYCLs Indexraum \cite[nach][25]{opencl2012}}
+    \caption[SYCLs Indexraum]{SYCLs Indexraum \cite[nach][25]{opencl2012}}
     \label{sycl:konzepte:abstraktion:ndrange}
 \end{figure}
 
